--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,33 @@
 }
 
 
+/* shared */
 
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+
+}
+
+.section-header{
+    font-size: 32px;
+    font-weight: bolder;
+
+}
+
+.section-description{
+    font-size: 16px;
+    line-height: 40px;
+}
+
+.dream-header{
+    font-size: 24px;
+}
 
 /*  fonts */
 .banner-title{
@@ -18,10 +44,13 @@
     font-weight: 800;
     line-height: 68px;
 }
+
+
 .regular-font{
     color: #0D1321;
     font-size: 16px;
-    line-height: 26px;
+    text-align: center;
+    line-height: 26px; 
 }
 
 
@@ -53,5 +82,91 @@ background: #0D1321;
 border: none;
 cursor: pointer;
 margin: 32px;
+}
 
+.btn-color{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+
+}
+
+/* section 2 */
+
+.dream-container{
+    display: flex;
+    justify-content:space-evenly;
+    gap: 130px;
+    margin-top: 60px;
+}
+
+.text{
+    text-align: left;
+}
+
+
+.reasons-to-choose-webdev{
+    background-color: rgba(13, 19, 33, 0.02);
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+}
+
+.section-header{
+    margin-top: 10px;
+}
+
+
+
+.btn-learn-more{
+    padding: 25px 35px 25px 35px;
+    font-family: Azeret Mono;
+    font-size: 20px;
+    font-weight:500;
+    line-height: 16px;
+    letter-spacing: 0%;
+    text-align: center;
+    border-color: black;
+    background: none;
+    cursor: pointer;
+    margin: 32px;
+    }
+
+.inspiration-container{
+    margin-bottom: 60px;
+    display: inline-block;
+    margin-left: 60px;
+    margin-right: 60px;
+}
+
+
+
+.border{
+    border: 50px solid; 
+    border-radius: 16px;
+    border-color: rgb(244, 244, 244);
+}
+
+
+.target-container{
+    display: flex;
+    gap: 24px;
+    text-align: left;
+}
+
+.target-description{
+    font-size: 16px;
+    line-height: 40px;
+}
+
+.target1{
+
+    background-color: rgba(255, 76, 30, 0.05);
+}
+
+.target2{
+    background-color: rgba(0, 76, 232, 0.05);
+}
+
+.target3{
+    background-color: rgba(255, 223, 0, 0.05);
 }
