--- a/styles/style.css
+++ b/styles/style.css
@@ -161,12 +161,65 @@ margin: 32px;
 .target1{
 
     background-color: rgba(255, 76, 30, 0.05);
+    padding: 30px;
 }
 
 .target2{
     background-color: rgba(0, 76, 232, 0.05);
+    padding: 30px;
 }
 
 .target3{
     background-color: rgba(255, 223, 0, 0.05);
+    padding: 30px;
 }
+
+.Learn{
+    color: #0D1321;
+    font-weight: 700;
+}
+
+.ineedsupport{
+    padding: 30px;
+    border-radius: 20px;
+    background-image: url(../assets/handshake.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:auto;
+    position: relative;
+    color:white;
+
+}
+
+.btn-submit {
+    padding: 10px 20px 10px 20px;
+    color: black;
+    font-family: Azeret Mono;
+    font-size: 12px;
+    font-weight:bolder;
+    letter-spacing: 0%;
+    text-align: center;
+    border-radius: 3px;
+    background: rgb(255, 255, 255);
+    border: none;
+    cursor: pointer;}
+
+    .btn-input{
+        padding: 10px 40px 10px 40px;
+        color: black;
+        font-family: Azeret Mono;
+        font-size: normal;
+        border-radius: 3px;
+        background: rgb(255, 255, 255);
+        border: none;
+    }
+
+    footer{
+        display: flex;
+        align-items:center;
+        justify-content:space-around;
+    }
+    footer{
+        background-color: rgba(13, 19, 33, 0.02);
+    }
+
