--- a/styles/style.css
+++ b/styles/style.css
@@ -54,6 +54,32 @@ main section{
 }
 
 
+/* extra */
+.extra{
+    display: flex;
+    align-items:center;
+    justify-content:space-around;
+
+}
+
+.extra-font{
+    font-weight:700;
+    font-size: 25px;
+    
+}
+
+.btn-resume{
+    padding: 10px 20px 10px 20px;
+    color: black;
+    font-family: Azeret Mono;
+    font-size: 20px;
+    font-weight:bolder;
+    letter-spacing: 0%;
+    text-align: center;
+    border-radius: 3px;
+    background: rgb(255, 255, 255);
+    cursor: pointer;}
+
 /* header */
 
 header{
